--- a/assets/custom.css
+++ b/assets/custom.css
@@ -26,6 +26,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background: rgba(0,0,0,0.5);
+	background-color: transparent;
 }
 ol, ul {
 	list-style: none;
@@ -43,4 +45,10 @@ table {
 	border-spacing: 0;
 }
 
-.mapDiv {width: 100%; height: 100%}
+#map {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
